# daedalus-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
framework/: CMakeLists.txt
framework/include/framework/: image.h  imgui_helper.h  mesh.h  shader.h
framework/src/: image.cpp  mesh.cpp  shader.cpp  window.cpp
report/: report.md
resources/brick_wall/: scene.gltf
shaders/: blinn_phong.frag  blinn_phong.vert  bloom_blur.frag  bloom_downsample.frag  bloom_threshold.frag  bloom_upsample.frag  brdf_lut.frag  camera_effects.frag  camera_effects.vert  common.glsl  equirect_to_cubemap.frag  equirect_to_cubemap.vert  irradiance_convolution.frag  light_cube.frag  light_cube.vert  outline.frag  outline.vert  path_debug.frag  path_debug.vert  pbr.frag  pbr.vert  prefilter.frag  shadow_debug.frag  shadow_debug.vert  shadow_frag.glsl  shadow_geom.glsl  shadow_point_instanced.geom  shadow_point_instanced.vert  shadow_vert.glsl  skybox.frag  skybox.vert  terrain.frag  terrain.vert  terrain_heightmap.comp  water.frag  water.vert
src/app/: Application.cpp  DebugUiManager.cpp  DebugUiManager.h  SelectionManager.cpp  SelectionManager.h
src/camera/: CameraPath.cpp  CameraPath.h  CameraPathPlayer.cpp  CameraPathPlayer.h  CameraStage.cpp  CameraStage.h  FPSCamera.cpp  FPSCamera.h  TopCamera.cpp  TopCamera.h
src/mesh/: MeshInstance.cpp  MeshInstance.h  MeshManager.cpp  MeshManager.h  mesh.cpp  mesh.h
src/particle/: ParticleSystem.cpp  ParticleSystem.h
src/pendulum/: PendulumManager.cpp  PendulumManager.h
src/player/: PlayerController.cpp  PlayerController.h
src/rendering/: CameraEffectsStage.cpp  CameraEffectsStage.h  EnvironmentManager.cpp  EnvironmentManager.h  LightManager.cpp  LightManager.h  Material.h  PathRenderer.cpp  PathRenderer.h  RenderStats.h  ShaderManager.cpp  ShaderManager.h  ShadingStage.cpp  ShadingStage.h  ShadowManager.cpp  ShadowManager.h  SunPathController.cpp  SunPathController.h  TextureUnits.h  stb_image.h  texture.cpp  texture.h
src/scene/: ModelLoader.cpp  ModelLoader.h
src/terrain/: ProceduralFloor.cpp  ProceduralFloor.h
src/ui/: Minimap.cpp  Minimap.h
src/util/: BezierPath.cpp  BezierPath.h  PathAnimator.cpp  PathAnimator.h  PerlinNoise.cpp  PerlinNoise.h
src/water/: Water.cpp  Water.h
